Updated tutorials, updated example_loader, added utils.

--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -27,11 +27,11 @@
      "collapsed": false,
      "input": [
       "import numpy as np\n",
-      "import pandas\n",
+      "import pandas as pd\n",
       "import matplotlib.pyplot as plt\n",
       "from fitensemble import lvbp, example_loader\n",
       "\n",
-      "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
+      "predictions, measurements, uncertainties = example_loader.load_alanine()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
       "\n",
       "num_samples = 25000  # Generate 25,000 MCMC samples\n",
@@ -62,7 +62,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -85,7 +85,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -107,7 +107,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -120,7 +120,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pandas.DataFrame([state_pops_raw,state_pops],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"Raw (MD)\", \"LVBP\"])"
+      "pd.DataFrame([state_pops_raw,state_pops],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"Raw (MD)\", \"LVBP\"])"
      ],
      "language": "python",
      "metadata": {},
@@ -141,32 +141,32 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>Raw (MD)</th>\n",
-        "      <td> 0.438570</td>\n",
-        "      <td> 0.509385</td>\n",
-        "      <td> 0.049371</td>\n",
-        "      <td> 0.002673</td>\n",
+        "      <td> 0.438756</td>\n",
+        "      <td> 0.509199</td>\n",
+        "      <td> 0.049334</td>\n",
+        "      <td> 0.002710</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>LVBP</th>\n",
-        "      <td> 0.562756</td>\n",
-        "      <td> 0.383495</td>\n",
-        "      <td> 0.051001</td>\n",
-        "      <td> 0.002748</td>\n",
+        "      <td> 0.557897</td>\n",
+        "      <td> 0.388415</td>\n",
+        "      <td> 0.050881</td>\n",
+        "      <td> 0.002807</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 5,
        "text": [
         "          $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
-        "Raw (MD)   0.438570  0.509385    0.049371    0.002673\n",
-        "LVBP       0.562756  0.383495    0.051001    0.002748"
+        "Raw (MD)   0.438756  0.509199    0.049334    0.002710\n",
+        "LVBP       0.557897  0.388415    0.050881    0.002807"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -183,7 +183,7 @@
      "collapsed": false,
      "input": [
       "state_uncertainties = state_pops_trace.std(0)\n",
-      "pandas.DataFrame([state_uncertainties],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"LVBP\"])"
+      "pd.DataFrame([state_uncertainties],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"LVBP\"])"
      ],
      "language": "python",
      "metadata": {},
@@ -204,24 +204,24 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>LVBP</th>\n",
-        "      <td> 0.033239</td>\n",
-        "      <td> 0.033849</td>\n",
-        "      <td> 0.00061</td>\n",
-        "      <td> 0.000007</td>\n",
+        "      <td> 0.031942</td>\n",
+        "      <td> 0.032518</td>\n",
+        "      <td> 0.000568</td>\n",
+        "      <td> 0.000013</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "      $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
-        "LVBP   0.033239  0.033849     0.00061    0.000007"
+        "LVBP   0.031942  0.032518    0.000568    0.000013"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -247,7 +247,7 @@
       "mu = predictions.T.dot(p)\n",
       "chi2_AVE = (((mu - measurements) / uncertainties)**2).mean(0)\n",
       "\n",
-      "pandas.DataFrame([[chi2_MCMC, chi2_AVE]],columns=[\"MCMC Sampled\", \"Posterior Average Populations\"],index=[\"Reduced $\\chi^2$\"])"
+      "pd.DataFrame([[chi2_MCMC, chi2_AVE]],columns=[\"MCMC Sampled\", \"Posterior Average Populations\"],index=[\"Reduced $\\chi^2$\"])"
      ],
      "language": "python",
      "metadata": {},
@@ -266,22 +266,22 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>Reduced $\\chi^2$</th>\n",
-        "      <td> 0.46832</td>\n",
-        "      <td> 0.001774</td>\n",
+        "      <td> 0.452694</td>\n",
+        "      <td> 0.023361</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
         "                  MCMC Sampled  Posterior Average Populations\n",
-        "Reduced $\\chi^2$       0.46832                       0.001774"
+        "Reduced $\\chi^2$      0.452694                       0.023361"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
