--- a/tutorial/Tutorial4.ipynb
+++ b/tutorial/Tutorial4.ipynb
@@ -23,10 +23,11 @@
      "collapsed": false,
      "input": [
       "import numpy as np\n",
+      "import pandas as pd\n",
       "import matplotlib.pyplot as plt\n",
       "from fitensemble import lvbp, example_loader\n",
       "\n",
-      "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
+      "predictions, measurements, uncertainties = example_loader.load_alanine_numpy()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
       "\n",
       "num_samples = 25000  # Generate 25,000 MCMC samples\n",
@@ -37,7 +38,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -60,7 +62,24 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " \r",
+        "[****************100%******************]  25000 of 25000 complete"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -87,7 +106,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -101,11 +121,55 @@
      "collapsed": false,
      "input": [
       "p = lvbp_model.accumulate_populations()\n",
-      "state_pops_trace = lvbp_model.trace_observable(indicators.T)"
+      "state_pops_trace = lvbp_model.trace_observable(indicators.T)\n",
+      "\n",
+      "state_pops = state_pops_trace.mean(0)\n",
+      "pd.DataFrame([state_pops],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"LVBP\"])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>$PP_{II}$</th>\n",
+        "      <th>$\\beta$</th>\n",
+        "      <th>$\\alpha_r$</th>\n",
+        "      <th>$\\alpha_l$</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>LVBP</th>\n",
+        "      <td> 0.556701</td>\n",
+        "      <td> 0.389624</td>\n",
+        "      <td> 0.050868</td>\n",
+        "      <td> 0.002806</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "      $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
+        "LVBP   0.556701  0.389624    0.050868    0.002806"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As before, we see the conformational populations of our LVBP ensemble."
+     ]
     }
    ],
    "metadata": {}
