--- a/tutorial/Tutorial3.ipynb
+++ b/tutorial/Tutorial3.ipynb
@@ -36,7 +36,7 @@
       "import matplotlib.pyplot as plt\n",
       "from fitensemble import lvbp, example_loader\n",
       "\n",
-      "measurements, predictions, uncertainties = example_loader.load_alanine()\n",
+      "predictions, measurements, uncertainties = example_loader.load_alanine_numpy()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
       "\n",
       "num_samples = 25000  # Generate 25,000 MCMC samples\n",
@@ -46,7 +46,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -68,7 +68,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -77,7 +77,9 @@
       "Grid Search\n",
       "-----------\n",
       "\n",
-      "We're ready to do the cross-validation.  We will use a grid search, where we build models using multiple values of `regularization_strength`.  When the calculations have finished, the results will be displayed in tabular form.  "
+      "We're ready to do the cross-validation.  We will use a grid search, where we build models using multiple values of `regularization_strength`.  When the calculations have finished, the results will be displayed in tabular form.  \n",
+      "\n",
+      "To do cross validation, we need a way to create models that fit using specific subsets of our data.  We do this by creating a Model factory--a function that creates models given some inputs."
      ]
     },
     {
@@ -87,7 +89,8 @@
       "regularization_strength_list = [1.0, 3.0, 5.0]\n",
       "all_test_chi = np.zeros(3)\n",
       "for k, regularization_strength in enumerate(regularization_strength_list):\n",
-      "    train_chi, test_chi = lvbp.cross_validated_mcmc(predictions, measurements, uncertainties, regularization_strength, bootstrap_index_list, num_samples=num_samples, thin=thin)\n",
+      "    model_factory = lambda predictions, measurements, uncertainties: lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
+      "    train_chi, test_chi = lvbp.cross_validated_mcmc(predictions, measurements, uncertainties, model_factory, bootstrap_index_list, num_samples=num_samples, thin=thin)\n",
       "    all_test_chi[k] = test_chi.mean()\n",
       "pandas.DataFrame([all_test_chi], columns=regularization_strength_list, index=[\"$\\chi^2$\"])"
      ],
@@ -100,13 +103,6 @@
        "text": [
         " \r",
         "[****************100%******************]  25000 of 25000 complete"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 5.0 0.512956169856 0.518365683993\n"
        ]
       },
       {
@@ -124,23 +120,30 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>$\\chi^2$</th>\n",
-        "      <td> 0.508468</td>\n",
-        "      <td> 0.477973</td>\n",
-        "      <td> 0.518366</td>\n",
+        "      <td> 0.512466</td>\n",
+        "      <td> 0.486301</td>\n",
+        "      <td> 0.509471</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 7,
        "text": [
         "                 1         3         5\n",
-        "$\\chi^2$  0.508468  0.477973  0.518366"
+        "$\\chi^2$  0.512466  0.486301  0.509471"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
