Renamed LVBP to BELT

--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -29,7 +29,7 @@
       "import numpy as np\n",
       "import pandas as pd\n",
       "import matplotlib.pyplot as plt\n",
-      "from fitensemble import lvbp, example_loader\n",
+      "from fitensemble import belt, example_loader\n",
       "\n",
       "predictions, measurements, uncertainties = example_loader.load_alanine()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
@@ -40,8 +40,8 @@
       "\n",
       "regularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? \n",
       "\n",
-      "lvbp_model = lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
-      "lvbp_model.sample(num_samples, thin=thin, burn=burn)"
+      "belt_model = belt.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
+      "belt_model.sample(num_samples, thin=thin, burn=burn)"
      ],
      "language": "python",
      "metadata": {},
@@ -71,7 +71,7 @@
       "Trace Observable\n",
       "----------------\n",
       "\n",
-      "Now we run the new code that outputs the trace of an additional \"observable\".  We simply call `lvbp_model.trace_observable()`.  This function takes a numpy array as input; here we input the transpose of the matrix of state indicators.  \n",
+      "Now we run the new code that outputs the trace of an additional \"observable\".  We simply call `belt_model.trace_observable()`.  This function takes a numpy array as input; here we input the transpose of the matrix of state indicators.  \n",
       "\n",
       "Thus, for each conformational ensemble in our MCMC trace, we calculate the population of the four torsional states:"
      ]
@@ -80,7 +80,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "state_pops_trace = lvbp_model.trace_observable(indicators.T)"
+      "state_pops_trace = belt_model.trace_observable(indicators.T)"
      ],
      "language": "python",
      "metadata": {},
@@ -238,12 +238,12 @@
      "collapsed": false,
      "input": [
       "chi2 = []\n",
-      "for pi in lvbp_model.iterate_populations():\n",
+      "for pi in belt_model.iterate_populations():\n",
       "    mu = predictions.T.dot(pi)\n",
       "    chi2.append((((mu - measurements) / uncertainties)**2).mean(0))\n",
       "\n",
       "chi2_MCMC = np.mean(chi2)\n",
-      "p = lvbp_model.accumulate_populations()\n",
+      "p = belt_model.accumulate_populations()\n",
       "mu = predictions.T.dot(p)\n",
       "chi2_AVE = (((mu - measurements) / uncertainties)**2).mean(0)\n",
       "\n",
