--- a/tutorial/Tutorial3.ipynb
+++ b/tutorial/Tutorial3.ipynb
@@ -34,7 +34,7 @@
       "import numpy as np\n",
       "import pandas\n",
       "import matplotlib.pyplot as plt\n",
-      "from fitensemble import lvbp, example_loader\n",
+      "from fitensemble import belt, example_loader\n",
       "\n",
       "predictions, measurements, uncertainties = example_loader.load_alanine_numpy()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
@@ -89,8 +89,8 @@
       "regularization_strength_list = [1.0, 3.0, 5.0]\n",
       "all_test_chi = np.zeros(3)\n",
       "for k, regularization_strength in enumerate(regularization_strength_list):\n",
-      "    model_factory = lambda predictions, measurements, uncertainties: lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
-      "    train_chi, test_chi = lvbp.cross_validated_mcmc(predictions, measurements, uncertainties, model_factory, bootstrap_index_list, num_samples=num_samples, thin=thin)\n",
+      "    model_factory = lambda predictions, measurements, uncertainties: belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)\n",
+      "    train_chi, test_chi = belt.cross_validated_mcmc(predictions, measurements, uncertainties, model_factory, bootstrap_index_list, num_samples=num_samples, thin=thin)\n",
       "    all_test_chi[k] = test_chi.mean()\n",
       "pandas.DataFrame([all_test_chi], columns=regularization_strength_list, index=[\"$\\chi^2$\"])"
      ],
