--- a/tutorial/Tutorial4.ipynb
+++ b/tutorial/Tutorial4.ipynb
@@ -14,7 +14,7 @@
       "File Input and Output\n",
       "=====================\n",
       "\n",
-      "In this tutorial, we discuss saving an LVBP model to disk for later use.  We repeat the same calculations as in the previous tutorials, but this time save the model to disk for later use.  \n",
+      "In this tutorial, we discuss saving an BELT model to disk for later use.  We repeat the same calculations as in the previous tutorials, but this time save the model to disk for later use.  \n",
       "\n"
      ]
     },
@@ -25,7 +25,7 @@
       "import numpy as np\n",
       "import pandas as pd\n",
       "import matplotlib.pyplot as plt\n",
-      "from fitensemble import lvbp, example_loader\n",
+      "from fitensemble import belt, example_loader\n",
       "\n",
       "predictions, measurements, uncertainties = example_loader.load_alanine_numpy()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
@@ -55,10 +55,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lvbp_model = lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
+      "belt_model = belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)\n",
       "\n",
       "pymc_filename = \"trialanine.h5\"\n",
-      "lvbp_model.sample(num_samples, thin=thin, burn=burn,filename=pymc_filename)"
+      "belt_model.sample(num_samples, thin=thin, burn=burn,filename=pymc_filename)"
      ],
      "language": "python",
      "metadata": {},
@@ -85,7 +85,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The HDF5 database file trialanine.h5 contains all components necessary to work with your LVBP model.  This includes\n",
+      "The HDF5 database file trialanine.h5 contains all components necessary to work with your BELT model.  This includes\n",
       "\n",
       "* `predictions`\n",
       "* `measurements`\n",
@@ -102,7 +102,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lvbp_model = lvbp.MaxEnt_LVBP.load(\"./trialanine.h5\")"
+      "belt_model = belt.MaxEnt_BELT.load(\"./trialanine.h5\")"
      ],
      "language": "python",
      "metadata": {},
@@ -120,11 +120,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "p = lvbp_model.accumulate_populations()\n",
-      "state_pops_trace = lvbp_model.trace_observable(indicators.T)\n",
+      "p = belt_model.accumulate_populations()\n",
+      "state_pops_trace = belt_model.trace_observable(indicators.T)\n",
       "\n",
       "state_pops = state_pops_trace.mean(0)\n",
-      "pd.DataFrame([state_pops],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"LVBP\"])"
+      "pd.DataFrame([state_pops],columns=[r\"$PP_{II}$\",r\"$\\beta$\",r\"$\\alpha_r$\",r\"$\\alpha_l$\"],index=[\"BELT\"])"
      ],
      "language": "python",
      "metadata": {},
@@ -144,7 +144,7 @@
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
-        "      <th>LVBP</th>\n",
+        "      <th>BELT</th>\n",
         "      <td> 0.556701</td>\n",
         "      <td> 0.389624</td>\n",
         "      <td> 0.050868</td>\n",
@@ -158,7 +158,7 @@
        "prompt_number": 7,
        "text": [
         "      $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
-        "LVBP   0.556701  0.389624    0.050868    0.002806"
+        "BELT   0.556701  0.389624    0.050868    0.002806"
        ]
       }
      ],
@@ -168,7 +168,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As before, we see the conformational populations of our LVBP ensemble."
+      "As before, we see the conformational populations of our BELT ensemble."
      ]
     }
    ],
