--- a/tutorial/Tutorial5.ipynb
+++ b/tutorial/Tutorial5.ipynb
@@ -21,7 +21,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "import numpy as np\nimport pandas as pd\nimport matplotlib.pyplot as plt\nfrom fitensemble import lvbp, example_loader\n\nnum_samples = 20000  # Generate 20,000 MCMC samples\nthin = 25  # Subsample (i.e. thin) the MCMC traces by 25X to ensure independent samples\nburn = 5000  # Discard the first 5000 samples as \"burn-in\"\n\nregularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? \n\npredictions, measurements, uncertainties = example_loader.load_alanine_pandas()",
+     "input": "import numpy as np\nimport pandas as pd\nimport matplotlib.pyplot as plt\nfrom fitensemble import belt, example_loader\n\nnum_samples = 20000  # Generate 20,000 MCMC samples\nthin = 25  # Subsample (i.e. thin) the MCMC traces by 25X to ensure independent samples\nburn = 5000  # Discard the first 5000 samples as \"burn-in\"\n\nregularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? \n\npredictions, measurements, uncertainties = example_loader.load_alanine_pandas()",
      "language": "python",
      "metadata": {},
      "outputs": [],
@@ -55,7 +55,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "lvbp_model = lvbp.MaxEnt_LVBP(predictions.values, measurements.values, uncertainties.values, regularization_strength)\nlvbp_model.sample(num_samples, thin=thin, burn=burn)",
+     "input": "belt_model = belt.MaxEnt_BELT(predictions.values, measurements.values, uncertainties.values, regularization_strength)\nbelt_model.sample(num_samples, thin=thin, burn=burn)",
      "language": "python",
      "metadata": {},
      "outputs": [
