--- a/tutorial/Tutorial1.ipynb
+++ b/tutorial/Tutorial1.ipynb
@@ -17,9 +17,9 @@
       "Introduction\n",
       "------------\n",
       "\n",
-      "In this tutorial, we use Linear Virtual Biasing Potential (LVBP) to infer the conformational ensemble of tri-alanine.  This calculation is similar to the one done in [1], but uses only a single experiment (for speed reasons).  \n",
+      "In this tutorial, we use Bayesian Energy Landscape Tilting (BELT) to infer the conformational ensemble of tri-alanine.  This calculation is similar to the one done in [1], but uses only a single experiment (for speed reasons).  \n",
       "\n",
-      "Performing an LVBP calculation requires three inputs:\n",
+      "Performing an BELT calculation requires three inputs:\n",
       "\n",
       "* A set of conformations to be used as a \"starting\" guess for the ensemble: $x_i$\n",
       "\n",
@@ -27,7 +27,7 @@
       "\n",
       "* The predicted experimental observables (``predictions``) at each conformation.\n",
       "\n",
-      "LVBP combines `measurements`, `uncertainties`, and `predictions` using Bayesian inference to produce a conformational ensemble that best agrees with your data.  \n",
+      "BELT combines `measurements`, `uncertainties`, and `predictions` using Bayesian inference to produce a conformational ensemble that best agrees with your data.  \n",
       "\n",
       "\n",
       "Importing FitEnsemble\n",
@@ -42,7 +42,7 @@
      "input": [
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
-      "from fitensemble import lvbp, example_loader"
+      "from fitensemble import belt, example_loader"
      ],
      "language": "python",
      "metadata": {},
@@ -108,7 +108,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In addition to the quantities *necessary* for the LVBP calculation, it's also useful to examine additional structural properties such as the $\\phi$ and $\\psi$ backbone torsions.  The follow code loads the backbone torsion angles $\\phi$ and $\\psi$ for the internal alanine in tri-alanine.  In addition, we have also calculated the conformation states of each snapshot ($\\alpha_r$, $\\beta$, $PP_{II}$ $\\;$, or $\\alpha_l$), using the state definitions from [2].  "
+      "In addition to the quantities *necessary* for the BELT calculation, it's also useful to examine additional structural properties such as the $\\phi$ and $\\psi$ backbone torsions.  The follow code loads the backbone torsion angles $\\phi$ and $\\psi$ for the internal alanine in tri-alanine.  In addition, we have also calculated the conformation states of each snapshot ($\\alpha_r$, $\\beta$, $PP_{II}$ $\\;$, or $\\alpha_l$), using the state definitions from [2].  "
      ]
     },
     {
@@ -129,7 +129,7 @@
       "Set Run Parameters\n",
       "------------------\n",
       "\n",
-      "We also need to define a number of parameters for the LVBP calculation.  These include the number of MCMC samples to generate, the amount by which to thin (i.e. subsample) the traces, and the number of samples to discard during the equilibration:"
+      "We also need to define a number of parameters for the BELT calculation.  These include the number of MCMC samples to generate, the amount by which to thin (i.e. subsample) the traces, and the number of samples to discard during the equilibration:"
      ]
     },
     {
@@ -167,17 +167,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Create LVBP Model\n",
+      "Create BELT Model\n",
       "-----------------\n",
       "\n",
-      "At this point, we are almost ready to go.  We create an LVBP object using our simulation and experimental data:"
+      "At this point, we are almost ready to go.  We create an BELT object using our simulation and experimental data:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lvbp_model = lvbp.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)"
+      "belt_model = belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)"
      ],
      "language": "python",
      "metadata": {},
@@ -195,7 +195,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lvbp_model.sample(num_samples, thin=thin, burn=burn)"
+      "belt_model.sample(num_samples, thin=thin, burn=burn)"
      ],
      "language": "python",
      "metadata": {},
@@ -232,7 +232,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a0 = lvbp_model.mcmc.trace(\"alpha\")[:,0]\n",
+      "a0 = belt_model.mcmc.trace(\"alpha\")[:,0]\n",
       "plt.plot(a0)\n",
       "plt.title(r\"MCMC trace of $\\alpha$\")"
      ],
@@ -257,14 +257,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The key outputs of an LVBP calculation are the posterior-averaged conformational populations.  The `accumulate_populations()` member function calculates these populations for you:"
+      "The key outputs of an BELT calculation are the posterior-averaged conformational populations.  The `accumulate_populations()` member function calculates these populations for you:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "p = lvbp_model.accumulate_populations()"
+      "p = belt_model.accumulate_populations()"
      ],
      "language": "python",
      "metadata": {},
@@ -278,7 +278,7 @@
       "Evaluate Model Quality\n",
       "----------------------\n",
       "\n",
-      "You should now check the agreement between the simulation and experiment.  We check both the raw MD simulation and the LVBP model.  "
+      "You should now check the agreement between the simulation and experiment.  We check both the raw MD simulation and the BELT model.  "
      ]
     },
     {
@@ -286,7 +286,7 @@
      "collapsed": false,
      "input": [
       "print(\"Reduced chi squared of raw MD: %f\" % np.mean(((predictions.mean(0) - measurements) / uncertainties)**2))\n",
-      "print(\"Reduced chi squared of LVBP: %f\" % np.mean(((predictions.T.dot(p) - measurements) / uncertainties)**2))"
+      "print(\"Reduced chi squared of BELT: %f\" % np.mean(((predictions.T.dot(p) - measurements) / uncertainties)**2))"
      ],
      "language": "python",
      "metadata": {},
@@ -296,7 +296,7 @@
        "stream": "stdout",
        "text": [
         "Reduced chi squared of raw MD: 6.429270\n",
-        "Reduced chi squared of LVBP: 0.020964\n"
+        "Reduced chi squared of BELT: 0.020964\n"
        ]
       }
      ],
@@ -309,7 +309,7 @@
       "Examine your Results\n",
       "--------------------\n",
       "\n",
-      "The above verifies that our LVBP model gives excellent agreement with the available experimental data--much more so than the raw MD.  At this point, we can dig deeper into understanding the results of our calculation.  Because we are looking at a single residue, we can visualize the relevant populations using a Ramachandran plot of the $\\phi$ and $\\psi$ torsion angles.  We first look at the raw MD simulation."
+      "The above verifies that our BELT model gives excellent agreement with the available experimental data--much more so than the raw MD.  At this point, we can dig deeper into understanding the results of our calculation.  Because we are looking at a single residue, we can visualize the relevant populations using a Ramachandran plot of the $\\phi$ and $\\psi$ torsion angles.  We first look at the raw MD simulation."
      ]
     },
     {
@@ -340,7 +340,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We now look at the reweighted (i.e. LVBP) ensemble.  You will notice that the $PP_{II}$ $\\;$ basin (top center-right) has increased its population, while the $\\beta$ basin (top left) has decreased its population.  We therefore conclude that the Amber ff96 forcefield is overly $\\beta$-prone; the LVBP model has partially corrected this bias.  "
+      "We now look at the reweighted (i.e. BELT) ensemble.  You will notice that the $PP_{II}$ $\\;$ basin (top center-right) has increased its population, while the $\\beta$ basin (top left) has decreased its population.  We therefore conclude that the Amber ff96 forcefield is overly $\\beta$-prone; the BELT model has partially corrected this bias.  "
      ]
     },
     {
