Minor changes to tutorials

--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Often, we would like to keep track of (i.e. `trace`) additional quantities while we sample the model likelihoods.  Tracing these quantities allows us to characterize the posterior distribution of arbitrary structural features.  For the case of tri-alanine, we would like to track the populations of each of the four conformational states.  As before, we start by constructing and sampling an LVBP model."
+      "We often want to calculate additional quantities using our MCMC samples.  Tracing these quantities allows us to characterize the posterior distribution of arbitrary structural features.  For the case of tri-alanine, we would like to track the populations of each of the four conformational states ($\\alpha$, $\\beta$, $PP_{II}$, other).  As before, we start by constructing and sampling an LVBP model."
      ]
     },
     {
@@ -31,7 +31,7 @@
       "import matplotlib.pyplot as plt\n",
       "from fitensemble import belt, example_loader\n",
       "\n",
-      "predictions, measurements, uncertainties = example_loader.load_alanine()\n",
+      "predictions, measurements, uncertainties = example_loader.load_alanine_numpy()\n",
       "phi, psi, assignments, indicators = example_loader.load_alanine_dihedrals()\n",
       "\n",
       "num_samples = 20000  # Generate 20,000 MCMC samples\n",
@@ -40,7 +40,7 @@
       "\n",
       "regularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? \n",
       "\n",
-      "belt_model = belt.MaxEnt_LVBP(predictions, measurements, uncertainties, regularization_strength)\n",
+      "belt_model = belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)\n",
       "belt_model.sample(num_samples, thin=thin, burn=burn)"
      ],
      "language": "python",
@@ -51,7 +51,7 @@
        "stream": "stdout",
        "text": [
         " \r",
-        "[****************100%******************]  25000 of 25000 complete"
+        "[****************100%******************]  20000 of 20000 complete"
        ]
       },
       {
@@ -62,7 +62,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -85,7 +85,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -107,7 +107,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -148,25 +148,25 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>LVBP</th>\n",
-        "      <td> 0.557897</td>\n",
-        "      <td> 0.388415</td>\n",
-        "      <td> 0.050881</td>\n",
-        "      <td> 0.002807</td>\n",
+        "      <td> 0.559800</td>\n",
+        "      <td> 0.386472</td>\n",
+        "      <td> 0.050921</td>\n",
+        "      <td> 0.002808</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 4,
        "text": [
         "          $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
         "Raw (MD)   0.438756  0.509199    0.049334    0.002710\n",
-        "LVBP       0.557897  0.388415    0.050881    0.002807"
+        "LVBP       0.559800  0.386472    0.050921    0.002808"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -204,24 +204,24 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>LVBP</th>\n",
-        "      <td> 0.031942</td>\n",
-        "      <td> 0.032518</td>\n",
-        "      <td> 0.000568</td>\n",
-        "      <td> 0.000013</td>\n",
+        "      <td> 0.033894</td>\n",
+        "      <td> 0.034513</td>\n",
+        "      <td> 0.000611</td>\n",
+        "      <td> 0.000014</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 5,
        "text": [
         "      $PP_{II}$   $\\beta$  $\\alpha_r$  $\\alpha_l$\n",
-        "LVBP   0.031942  0.032518    0.000568    0.000013"
+        "LVBP   0.033894  0.034513    0.000611    0.000014"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -266,22 +266,22 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>Reduced $\\chi^2$</th>\n",
-        "      <td> 0.452694</td>\n",
-        "      <td> 0.023361</td>\n",
+        "      <td> 0.497532</td>\n",
+        "      <td> 0.012774</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 6,
        "text": [
         "                  MCMC Sampled  Posterior Average Populations\n",
-        "Reduced $\\chi^2$      0.452694                       0.023361"
+        "Reduced $\\chi^2$      0.497532                       0.012774"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
