Fixed x log(x) issue in maxent belt.  Removed underscores from class names.

--- a/tutorial/Tutorial1.ipynb
+++ b/tutorial/Tutorial1.ipynb
@@ -177,7 +177,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "belt_model = belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)"
+      "belt_model = belt.MaxEntBELT(predictions, measurements, uncertainties, regularization_strength)"
      ],
      "language": "python",
      "metadata": {},
