--- a/tutorial/Tutorial2.ipynb
+++ b/tutorial/Tutorial2.ipynb
@@ -40,7 +40,7 @@
       "\n",
       "regularization_strength = 3.0  # How strongly do we prefer a \"uniform\" ensemble (the \"raw\" MD)? \n",
       "\n",
-      "belt_model = belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)\n",
+      "belt_model = belt.MaxEntBELT(predictions, measurements, uncertainties, regularization_strength)\n",
       "belt_model.sample(num_samples, thin=thin, burn=burn)"
      ],
      "language": "python",
