--- a/tutorial/Tutorial3.ipynb
+++ b/tutorial/Tutorial3.ipynb
@@ -89,7 +89,7 @@
       "regularization_strength_list = [1.0, 3.0, 5.0]\n",
       "all_test_chi = np.zeros(3)\n",
       "for k, regularization_strength in enumerate(regularization_strength_list):\n",
-      "    model_factory = lambda predictions, measurements, uncertainties: belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)\n",
+      "    model_factory = lambda predictions, measurements, uncertainties: belt.MaxEntBELT(predictions, measurements, uncertainties, regularization_strength)\n",
       "    train_chi, test_chi = belt.cross_validated_mcmc(predictions, measurements, uncertainties, model_factory, bootstrap_index_list, num_samples=num_samples, thin=thin)\n",
       "    all_test_chi[k] = test_chi.mean()\n",
       "pandas.DataFrame([all_test_chi], columns=regularization_strength_list, index=[\"$\\chi^2$\"])"
