--- a/tutorial/Tutorial4.ipynb
+++ b/tutorial/Tutorial4.ipynb
@@ -55,7 +55,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "belt_model = belt.MaxEnt_BELT(predictions, measurements, uncertainties, regularization_strength)\n",
+      "belt_model = belt.MaxEntBELT(predictions, measurements, uncertainties, regularization_strength)\n",
       "\n",
       "pymc_filename = \"trialanine.h5\"\n",
       "belt_model.sample(num_samples, thin=thin, burn=burn,filename=pymc_filename)"
@@ -102,7 +102,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "belt_model = belt.MaxEnt_BELT.load(\"./trialanine.h5\")"
+      "belt_model = belt.MaxEntBELT.load(\"./trialanine.h5\")"
      ],
      "language": "python",
      "metadata": {},
