--- a/tutorial/Tutorial5.ipynb
+++ b/tutorial/Tutorial5.ipynb
@@ -105,7 +105,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "belt_model = belt.MaxEnt_BELT(predictions.values, measurements.values, uncertainties.values, regularization_strength)\n",
+      "belt_model = belt.MaxEntBELT(predictions.values, measurements.values, uncertainties.values, regularization_strength)\n",
       "belt_model.sample(num_samples, thin=thin, burn=burn)"
      ],
      "language": "python",
